# MedicamentLibrary

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
common/crypto/: CMakeLists.txt
common/crypto/hash_creator/factory/: hash_creator_factory.hpp
common/crypto/hash_creator/interface/: hash_creator_interface.hpp
common/crypto/salt_generator/include/: salt_generator.hpp
common/crypto/salt_generator/source/: salt_generator.cpp
common/db/: CMakeLists.txt
common/db/base/: db_conditions.hpp  db_controller.hpp  db_field.hpp  db_record.hpp
common/db/behavioral/: CMakeLists.txt
common/db/behavioral/operations_strategies/: CMakeLists.txt
common/db/behavioral/transaction_mediator/: CMakeLists.txt
common/db/creational/: CMakeLists.txt
common/db/creational/factory/: CMakeLists.txt  db_interface_factory.cpp  db_interface_factory.hpp
common/db/creational/pool/: db_interface_pool.cpp  db_interface_pool.hpp
common/db/exceptions/: error_codes.hpp  exceptions.hpp
common/db/interface/: db_interface.hpp
common/db/interfaces/exceptions/: CMakeLists.txt  error_codes.hpp  exceptions.hpp
common/db/interfaces/interface/: CMakeLists.txt  db_interface.hpp
common/db/interfaces/transaction_manager/: CMakeLists.txt
common/db/mock/basic_mock/: CMakeLists.txt
common/db/postgres/pqxx_impl/: CMakeLists.txt
common/hash_creator/: CMakeLists.txt
common/hash_creator/factory/: hash_creator_factory.cpp  hash_creator_factory.hpp
common/hash_creator/interface/: hash_creator_interface.hpp
common/hash_creator/pbkdf2/include/: pbkdf2.hpp
common/hash_creator/sha_256/include/: sha_256.h
common/stopwatch/: CMakeLists.txt
common/stopwatch/include/: stopwatch.hpp
common/stopwatch/source/: stopwatch.cpp
common/utilities/: CMakeLists.txt
common/utilities/include/: compile_time_utils.hpp  security_utils.hpp
common/utilities/source/: utilities.cpp
dao/: CMakeLists.txt
dao/auth_data_holder/: auth_data_holder.cpp  auth_data_holder.hpp
dao/crud_interface/: handbook.hpp
dao/handbook_base/: handbook_base.hpp
dao/handbooks/: CMakeLists.txt  super_handbook.hpp
dao/handbooks/diseases/include/: diseases_handbook.hpp
dao/handbooks/diseases/source/: diseases_handbook.cpp
dao/handbooks/interface/: handbook_base.hpp
dao/handbooks/medicaments/include/: medicaments_handbook.hpp
dao/handbooks/medicaments/source/: medicaments_handbook.cpp
dao/handbooks/organizations/include/: organizations_handbook.hpp
dao/handbooks/organizations/source/: organizations_handbook.cpp
dao/handbooks/patients/include/: patients_handbook.hpp
dao/handbooks/patients/source/: patients_handbook.cpp
dao/medicament_handbook/include/: medicament_handbook.hpp
data/: CMakeLists.txt
data/base/: data_property.hpp
data/creational/: CMakeLists.txt
data/creational/property_factory/: property_factory.hpp
data/creational/property_factory/include/: properties_controller.hpp  property_factory.hpp
data/creational/property_factory/source/: properties_controller.cpp  property_factory.cpp
data/objects/: CMakeLists.txt  instruction.md
data/objects/auth_objects/include/: auth_object.hpp
data/objects/auth_objects/source/: auth_object.cpp
data/objects/base/: common_obj.hpp  medicament_base.hpp  organization_base.hpp  patients_base.hpp
data/objects/base/include/: common_obj.hpp  common_object.hpp  disease.hpp  medicament.hpp  objects.hpp  organization.hpp  patient.hpp  patients_base.hpp
data/objects/base/source/: objects.cpp
data/objects/medicaments/: medicament_base.hpp
data/objects/medicaments/include/: medicament_base.hpp  medicaments.hpp
data/objects/medicaments/source/: medicaments.cpp
data/objects/organizations/: organization_base.hpp
data/objects/patients/: patients_base.hpp
data/objects/properties/: CMakeLists.txt  data_property.hpp
services/drogon/: CMakeLists.txt
services/drogon/authenticator_service/: CMakeLists.txt  Dockerfile  main.cpp
services/drogon/config_utils/: CMakeLists.txt
services/drogon/gateway/: CMakeLists.txt  Dockerfile  main.cpp
services/drogon/librarian_service/: CMakeLists.txt  Dockerfile  main.cpp
services/drogon/look_up_service/: CMakeLists.txt  main.cpp
services/drogon/search_service/: CMakeLists.txt  Dockerfile  main.cpp
services/drogon/test_service/: CMakeLists.txt  main.cpp
services/drogon/treatment_manager_service/: CMakeLists.txt  Dockerfile  main.cpp
services/internal/: CMakeLists.txt
services/internal/authenticator/: CMakeLists.txt
services/internal/librarian/: CMakeLists.txt
services/internal/patient_info_editor/: CMakeLists.txt
services/internal/search/: CMakeLists.txt
services/internal/treatment_manager/: CMakeLists.txt
services/lookup_service/: CMakeLists.txt
services/lookup_service/include/: lookup_service_internal.hpp
services/lookup_service/source/: lookup_service_internal.cpp
services/patient_profile_service/: CMakeLists.txt
services/patient_profile_service/include/: patient_profile_service_internal.hpp
services/patient_profile_service/source/: patient_profile_service_internal.cpp
tests/: CMakeLists.txt
tests/basic/: installment_check.cpp  sandbox.cpp
tests/integration_tests/: CMakeLists.txt
tests/integration_tests/pqxx_client/: test_pqxx_client.cpp
tests/non_automate/: lookup_service.cpp  search_service.cpp
tests/sandbox/: sandbox.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/db_interface_pool/: test_db_interface_pool.cpp
tests/unit_tests/objects/: CMakeLists.txt
tests/unit_tests/pqxx_client/: test_pqxx_client.cpp
tests/unit_tests/stopwatch/: test_stopwatch.cpp
tests/unit_tests/transaction_manager/: test_transaction_manager.cpp
tools/: CMakeLists.txt  submodule_updater.sh
tools/db_tools/dropper/: drop_all_tables.cpp
tools/db_tools/filler/: filler_with_easy_data.cpp  import_from_csv.cpp
tools/db_tools/json_manipulator/: CMakeLists.txt  json_creation_from_mock_objects.cpp
tools/installer/: install.sh  install_fedora.sh  install_ubuntu.sh  install_vcpkg.sh
tools/service_tools/: create_new_drogon_service.py
(+186 files in other folders)
